--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
       <button type="submit">Login</button>
     </form>
     <p id="loginResult" class="result-text"></p>
-    <p>Don't have an account? <a href="{{ url_for('register_page') }}">Register here</a></p>
+    <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
   </div>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
