--- a/templates/register.html
+++ b/templates/register.html
@@ -8,14 +8,12 @@
 <body>
   <div class="container">
     <h2>Register</h2>
-    <form id="registerForm">
+    <form action="{{ url_for('register') }}" method="POST">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Register</button>
     </form>
-    <p id="registerResult" class="result-text"></p>
     <p>Already have an account? <a href="{{ url_for('login_page') }}">Login here</a></p>
   </div>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
