--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,6 +42,11 @@
         <button id="globalSummaryBtn">Show Global Summary</button>
         <div id="globalSummary"></div>
 
+        <!-- Cost Calculation -->
+        <h2>Cost Calculation Per Person</h2>
+        <button id="calculateCostBtn">Calculate Monthly Cost</button>
+        <div id="costResult" class="result"></div>
+
         <!-- Logout -->
         <a id="logout" href="/logout">Logout</a>
     </div>
