--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-  <div class="container">
+  <div class="form-container">
     <h2>Login</h2>
-    <form action="{{ url_for('login_user') }}" method="POST">
+    <form action="{{ url_for('login_page') }}" method="POST">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="{{ url_for('home') }}">Register here</a></p>
+    <p class="form-switch">Don't have an account? <a href="{{ url_for('home') }}">Register here</a></p>
   </div>
 </body>
 </html>
