--- a/templates/register.html
+++ b/templates/register.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-  <div class="container">
+  <div class="form-container">
     <h2>Register</h2>
     <form action="{{ url_for('register') }}" method="POST">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Register</button>
     </form>
-    <p>Already have an account? <a href="{{ url_for('login_page') }}">Login here</a></p>
+    <p class="form-switch">Already have an account? <a href="{{ url_for('login_page') }}">Login here</a></p>
   </div>
 </body>
 </html>
