--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -170,7 +170,9 @@
     </style>
 </head>
 <body>
+    
     <div class="container">
+        <div id="toast" class="toast"></div>
         <h1>Welcome, {{ session['username'] }}</h1>
 
         <!-- Meal Submission -->
