--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -178,7 +178,7 @@
         <!-- Active Meals Today -->
 <div class="active-meals-card">
     <div class="active-meals-header">
-        <img src="/static/icons/meal-icon.png" alt="Meals" class="meal-icon">
+       <img src="https://icon-library.com/images/meal-icon-png/meal-icon-png-17.jpg" alt="Meal Icon" class="meal-icon">
         <h3>Active Meals Today</h3>
     </div>
     <ul id="activeMealsList" class="active-meals-list"></ul>
